c4prj2_input/grade.txt
Grading at Tue Mar  9 11:14:58 UTC 2021
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘read_input’:
input.c:40:5: error: unknown type name ‘deck’
     deck * t add = hand_from_string(input,fc);
     ^
input.c:40:14: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘add’
     deck * t add = hand_from_string(input,fc);
              ^
input.c:41:9: error: ‘add’ undeclared (first use in this function)
     if (add == NULL) continue;
         ^
input.c:41:9: note: each undeclared identifier is reported only once for each function it appears in
Compilation of input.c failed

Overall Grade: F
